# service/api/api-handler.go
@@ -28,10 +28,18 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.DELETE("/users/:username/bans/:banned_username", rt.wrap(rt.unbanUser))
 
 	// Posts routes
-	rt.router.POST("/users/:username/profile/posts", rt.wrap(rt.uploadPhoto))
-	rt.router.GET("/users/:username/profile/posts", rt.wrap(rt.getUserPosts))
-	rt.router.GET("/users/:username/profile/:post_id", rt.wrap(rt.getPost))
-	rt.router.DELETE("/users/:username/profile/:post_id", rt.wrap(rt.deletePhoto))
+	rt.router.GET("/users/:username/profile/posts/", rt.wrap(rt.getUserPosts))
+	rt.router.POST("/users/:username/profile/posts/", rt.wrap(rt.uploadPhoto))
+	rt.router.GET("/users/:username/profile/posts/:post_id/", rt.wrap(rt.getPost))
+	rt.router.DELETE("/users/:username/profile/posts/:post_id/", rt.wrap(rt.deletePhoto))
+	rt.router.GET("/users/:username/profile/posts/:post_id/likes/", rt.wrap(rt.getLikes))
+	rt.router.PUT("/users/:username/profile/posts/:post_id/likes/:liker_id", rt.wrap(rt.likePhoto))
+	rt.router.DELETE("/users/:username/profile/posts/:post_id/likes/:liker_id", rt.wrap(rt.unlikePhoto))
+	rt.router.GET("/users/:username/profile/posts/:post_id/comments/", rt.wrap(rt.getComments))
+	rt.router.POST("/users/:username/profile/posts/:post_id/comments/", rt.wrap(rt.commentPhoto))
+	rt.router.DELETE("/users/:username/profile/posts/:post_id/comments/:comment_id", rt.wrap(rt.uncommentPhoto))
+
+	// Follo
 
 	return rt.router
 }
